--- a/index.html
+++ b/index.html
@@ -5,53 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <title>Portfolio de Bertrand</title>
   </head>
   <body>
     <!--Header-->
+    <div class="container">
     <header>
-      <h1>Bienvenue</h1>
+      <h1 class="bienvenue">Bienvenue</h1>
       <section class="links">
-        <a href="google.fr">lien1</a>
-        <a href="google.fr">lien2</a>
-        <a href="google.fr">lien3</a>
+        <a href="google.fr"><i class="fa-brands fa-linkedin fa-2xl" style="color: #a2a7af; "></i></i></a>
+        <a href="google.fr"><i class="fa-brands fa-github fa-2xl" style="color: #a2a7af;"></i></i></a>
       </section>
 
       <!--Description-->
-      <section class="description">Description perso</section>
+      <section class="description">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</section>
 
       <!--Download CV-->
-      <section class="cv">CV</section>
+      <section class="cv">Mon CV à télécharger ici</section>
 
       <!--Ongoing projects-->
-      <section class="projects">Ongoing projects description</section>
+      <section class="projectsdescription">Projects à venir..</section>
     </header>
 
     <!--Projects-->
     <main>
       <!--Frontend Projects-->
-      <section class="frontend">
-        <!--Frontend project 1-->
-        <div class="fproject1 projects">
-          <div class="description"></div>
-          <div class="technologies"></div>
-          <a href="www.google.fr">Lien 1 icône</a>
-        </div>
-        <!--Frontend project 2-->
-        <div class="fproject2 projects">
-          <div class="description"></div>
-          <div class="technologies"></div>
-          <a href="www.google.fr">Lien 1 icône</a>
-        </div>
-      </section>
+      <section class="projects">
+        <h1 class="projectstitle">Frontend</h1>
+        <section class="frontend">
+          <!--Frontend project 1-->
+          <div class="fproject1 fprojects allprojects">
+            <div class="description-projet-container">
+              <div class="titre-projet">Titre du projet</div>
+              <div class="description-projet">ipso</div>
+            </div>
 
-      <!--Backeend Projects-->
-      <section class="backend">Back</section>
+            <div class="link-container">
+              <a class="link-project" href="">Demo</a>
+              <a class="link-git" href="">Git</a>
+            </div>
+          </div>
+          <!--Frontend project 2-->
+
+        </section>
+
+        <!--Backeend Projects-->
+        <h1 class="projectstitle">Backend</h1>
+        <section class="backend">
+        <!--Backend project 1-->
+          <div class="bproject1 bprojects allprojects">
+          </div>
+        </section>
+
+    </section>
     </main>
 
     <!--Footer-->
     <footer>Footer Keywords</footer>
-
+  </div>
     <script src="script.js"></script>
   </body>
 </html>
