work in progress

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <h1 class="projectstitle">Frontend</h1>
         <section class="frontend">
           <!--Frontend project 1-->
-          <div class="fproject1 fprojects allprojects">
+          <div class="fproject1 allprojects">
             <div class="description-projet-container">
               <div class="titre-projet">Titre du projet</div>
-              <div class="description-projet">ipso</div>
+              <div class="description-projet">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
             </div>
 
             <div class="link-container">
-              <a class="link-project" href="">Demo</a>
+              <a class="link-project" href="google.fr">Demo</a>
               <a class="link-git" href="">Git</a>
             </div>
           </div>
