--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <!--Header-->
     <div class="container">
     <header>
-      <h1 class="bienvenue">Bienvenue</h1>
+      <div class="welcome">
+        <h1>
+          Bienvenue
+        </h1>
+      </div>
       <section class="links">
-        <a href="google.fr"><i class="fa-brands fa-linkedin fa-2xl" style="color: #a2a7af; "></i></i></a>
-        <a href="google.fr"><i class="fa-brands fa-github fa-2xl" style="color: #a2a7af;"></i></i></a>
+        <a href="google.fr"><i class="fa-brands fa-linkedin fa-3x" style="color: #a2a7af; "></i></i></a>
+        <a href="google.fr"><i class="fa-brands fa-github fa-3x" style="color: #a2a7af;"></i></i></a>
       </section>
 
       <!--Description-->
@@ -41,9 +45,21 @@
         <section class="frontend">
           <!--Frontend project 1-->
           <div class="fproject1 allprojects">
-            <div class="description-projet-container">
+            <div class="description-project-container">
               <div class="titre-projet">Titre du projet</div>
-              <div class="description-projet">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+              <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+            </div>
+
+            <div class="link-container" >
+              <a class="link-project" href="google.fr">Demo</a>
+              <a class="link-git" href="">Git</a>
+            </div>
+          </div>
+          <!--Frontend project 2-->
+          <div class="fproject1 allprojects">
+            <div class="description-project-container">
+              <div class="titre-projet">Titre du projet</div>
+              <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
             </div>
 
             <div class="link-container">
@@ -51,7 +67,6 @@
               <a class="link-git" href="">Git</a>
             </div>
           </div>
-          <!--Frontend project 2-->
 
         </section>
 
@@ -59,8 +74,32 @@
         <h1 class="projectstitle">Backend</h1>
         <section class="backend">
         <!--Backend project 1-->
-          <div class="bproject1 bprojects allprojects">
+          <div class="bproject1 allprojects">
+            <div class="description-project-container">
+              <div class="titre-projet">Titre du projet</div>
+              <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+            </div>
+
+            <div class="link-container">
+              <a class="link-project" href="google.fr">Demo</a>
+              <a class="link-git" href="">Git</a>
+            </div>
           </div>
+
+        <!--Backend project 2-->
+        <div class="bproject1 allprojects">
+          <div class="description-project-container">
+            <div class="titre-projet">Titre du projet</div>
+            <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+          </div>
+
+          <div class="link-container">
+            <a class="link-project" href="google.fr">Demo</a>
+            <a class="link-git" href="">Git</a>
+          </div>
+        </div>
+        
+
         </section>
 
     </section>
