--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="cv">...</section>-->
 
       <!--CV Button-->
-      <section href="#" class="read-button">En savoir plus</section>
+      <section href="#" class="read-button">Voir les projets</section>
     </div>
 
     </header>  
@@ -48,13 +48,15 @@
     <!--Projects-->
     <main>
       <div class="projects-page">
+
+        <h1 class="title-my-projects">Mes projets</h1>
         
-          <!--Ongoing projects-->
-          <section class="projectsdescription">Projects à venir..</section>
+        <!--Ongoing projects-->
+        <section class="upcoming-project">Projet en cours : </section>
 
         <!--Frontend Projects-->
         <section class="projects">
-          <h1 class="projectstitle">Frontend</h1>
+          <h1 class="projects-title">Frontend</h1>
           <section class="frontend">
 
             <!--Frontend project 1-->
@@ -114,15 +116,24 @@
             </div>
           </div>
         </div>
-          
+
           </section>
-
       </section>
-      </main>
 
-      <!--Footer-->
-      <footer>Footer Keywords</footer>
+
+      <!--Section CV-->
+    <div class="cv-page">
+      <h1 class="cv-title">Mon CV</h1> 
+      <a class="cv-link" href="#">Link</a>
     </div>
+
+
+    </main>
+  </div>
+
+    <!--Footer-->
+    <footer>Footer Keywords</footer>
+
     <script src="script.js"></script>
   </body>
 </html>
