--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -124,8 +124,10 @@
       <!--Section CV-->
     <div class="cv-page">
       <h1 class="cv-title">Mon CV</h1> 
-      <a class="cv-link" href="#">Link</a>
-    </div>
+      
+        <a class="cv-link" href="#" download>
+          <div>Télécharger</div>
+        </a>
 
 
     </main>
