--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
   </div>
 
     <!--Footer-->
-    <footer>Footer Keywords</footer>
+    <footer>
+      <div class="email-footer">Email</div>
+      <div class="icons-footer">Icons</div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
