--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <div class="main-page" id="showcase">
 
     <header>
+      
+      <!--Navigation bar-->
+      <div class="navigation-bar">  
+        <ul>
+          <li><a href="#"> Accueil </a></li>
+          <li><a href="#"> Projets </a></li>
+          <li><a href="#"> CV </a></li>
+        </ul>
+      </div>
+
+      <div class="main-page-content">
+      <!--Welcome-->
       <div class="welcome">
         <h1>
           Bienvenue
@@ -39,7 +51,10 @@
 
       <!--CV Button-->
       <section href="#" class="read-button">Voir les projets</section>
+
+      
     </div>
+  </div>
 
     </header>  
     <!--Page Container-->
