--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <!-- Main description-->
-      <section class="description">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</section>
+      <section class="description"><p>Diplômé en Informatique et Développement Web et à la recherche d'une nouvelle opportunité. <br>Mise en ligne régulière de code sur GitHub.</p></section>
 
       <!-- Icons -->
       <section class="links">
@@ -76,8 +76,8 @@
             <!--Frontend project 1-->
             <div class="fproject1 allprojects">
               <div class="description-project-container">
-                <div class="titre-projet">Titre du projet</div>
-                <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+                <div class="titre-projet"><h3>Titre du projet</h3></div>
+                <div class="description-project"><p>aphicLorem ipsum is placeholder text commonly used in the graphic</p></div>
               </div>
 
               <div class="link-container" >
@@ -86,14 +86,14 @@
               </div>
             </div>
 
-            <!--Frontend project 2-->
+            <!--Frontend project 1-->
             <div class="fproject1 allprojects">
               <div class="description-project-container">
-                <div class="titre-projet">Titre du projet</div>
-                <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+                <div class="titre-projet"><h3>Titre du projet</h3></div>
+                <div class="description-project"><p>aphicLorem ipsum is placeholder text commonly used in the graphic</p></div>
               </div>
 
-              <div class="link-container">
+              <div class="link-container" >
                 <a class="link-project" href="google.fr">Demo</a>
                 <a class="link-git" href="">Git</a>
               </div>
@@ -101,34 +101,35 @@
           </section>
 
           <!--Backeend Projects-->
-          <h1 class="projectstitle">Backend</h1>
+          <h1 class="projects-title">Backend</h1>
           <section class="backend">
 
           <!--Backend project 1-->
-            <div class="bproject1 allprojects">
+            <!--Frontend project 1-->
+            <div class="fproject1 allprojects">
               <div class="description-project-container">
-                <div class="titre-projet">Titre du projet</div>
-                <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
+                <div class="titre-projet"><h3>Titre du projet</h3></div>
+                <div class="description-project"><p>aphicLorem ipsum is placeholder text commonly used in the graphic</p></div>
               </div>
 
-              <div class="link-container">
+              <div class="link-container" >
                 <a class="link-project" href="google.fr">Demo</a>
                 <a class="link-git" href="">Git</a>
               </div>
             </div>
 
           <!--Backend project 2-->
-          <div class="bproject1 allprojects">
-            <div class="description-project-container">
-              <div class="titre-projet">Titre du projet</div>
-              <div class="description-project">aphicLorem ipsum is placeholder text commonly used in the graphic</div>
-            </div>
+            <div class="fproject1 allprojects">
+              <div class="description-project-container">
+                <div class="titre-projet"><h3>Titre du projet</h3></div>
+                <div class="description-project"><p>aphicLorem ipsum is placeholder text commonly used in the graphic</p></div>
+              </div>
 
-            <div class="link-container">
-              <a class="link-project" href="google.fr">Demo</a>
-              <a class="link-git" href="">Git</a>
+              <div class="link-container" >
+                <a class="link-project" href="google.fr">Demo</a>
+                <a class="link-git" href="">Git</a>
+              </div>
             </div>
-          </div>
         </div>
 
           </section>
@@ -149,9 +150,12 @@
 
     <!--Footer-->
     <footer>
-      <div class="email-footer">Contact</div>
-      <div class="email-footer">Email : b.duclot@gmail.com</div>
-      <div class="icons-footer">Icons</div>
+      <div class="email-footer"><p>Contact</p></div>
+      <div class="email-footer"><p>b.duclot@gmail.com</p></div>
+      <section class="links-footer">
+        <a href="https://www.linkedin.com/in/bertrand-duclot-a7369663"><i class="fa-brands fa-linkedin fa-2x" style="color: #5982c5; "></i></i></a>
+        <a href="https://github.com/BertrandDuclot"><i class="fa-brands fa-github fa-2x" style="color: #000000;"></i></i></a>
+      </section>
     </footer>
 
     <script src="script.js"></script>
