--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <!--Footer-->
     <footer>
-      <div class="email-footer"><p>Contact</p></div>
+      <div class="email-footer"><p>Contact :</p></div>
       <div class="email-footer"><p>b.duclot@gmail.com</p></div>
       <section class="links-footer">
         <a href="https://www.linkedin.com/in/bertrand-duclot-a7369663"><i class="fa-brands fa-linkedin fa-2x" style="color: #5982c5; "></i></i></a>
